[metadata]
name = amtrakconn
version = 0.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/amtrak-connections
description = Plots historical Amtrak connections
keywords =
  train
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  python-dateutil
  pandas
  matplotlib
  numpy
  beautifulsoup4
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
